fix-jump-links
fix-jump-links

--- a/src/scss/partials/offer.scss
+++ b/src/scss/partials/offer.scss
@@ -130,7 +130,7 @@
 	display: block;
 	color: $font-color;
 	padding: 5px 0 6px;
-    margin-top: 8px;
+    margin-top: 10px;
     letter-spacing: -0.45px;
     text-align: center;
 
