--- a/src/scss/partials/realty.scss
+++ b/src/scss/partials/realty.scss
@@ -11,7 +11,7 @@ a {
 		margin: 20px auto;
 		@include flexbox();
 		flex-flow: row-reverse wrap;
-    	padding: 24px 35px 41px;
+    	padding: 24px 38px 41px;
     	justify-content: flex-end;
     	box-sizing: border-box;
 	}
